commit inicial - createWallet endpoint
