# app.js
@@ -1,39 +1,17 @@
 const express = require("express");
-const { Client } = require("pg");
+const cors = require("cors");
 const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("./swagger.json");
 const payments = require("./infrastructure/routes/payments");
 
 const app = express();
 
-let client;
-if (process.env.NODE_ENV !== "stage") {
-  client = new Client({
-    connectionString: process.env.DATABASE_URL,
-    query_timeout: 1000,
-    statement_timeout: 1000,
-    ssl: false,
-  });
-} else {
-  client = new Client({
-    connectionString: process.env.DATABASE_URL,
-    query_timeout: 1000,
-    statement_timeout: 1000,
-    ssl: {
-      rejectUnauthorized: false,
-    },
-  });
-}
+app.use(cors());
+app.use(express.json());
 
-client.connect();
-
-app.use("/payments", payments);
+app.use("/", payments);
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-app.get("/ping", (req, res) => res.send("Pong!"));
+app.serviceLocator = require("./infrastructure/config/ServiceLocator");
 
-app.get("/status", (req, res) => client.query("SELECT NOW()", (err) => res.send({ service: "UP", db: err ? "DOWN" : "UP" })));
-
-app.listen(process.env.PORT, () => {
-  // console.log(`App running on port ${process.env.PORT}`);
-});
+module.exports = app;
