# domain/WalletModel.js
@@ -1,0 +1,7 @@
+module.exports = class Wallet {
+    constructor(UUID, address, privateKey) {
+      this.id = UUID;
+      this.address = address;
+      this.privateKey = privateKey;
+    }
+  };
