# infrastructure/routes/payments.js
@@ -1,15 +1,13 @@
 const express = require("express");
+const walletController = require("../../application/controllers/WalletController");
+const depositController = require("../../application/controllers/DepositController");
 
 const router = express.Router();
 
-// Home page route
-router.get("/", (req, res) => {
-  res.send("Página de inicio");
-});
-
-// Id page route
-router.get("/:id", (req, res) => {
-  res.send("Acerca de esta wiki");
-});
+router.get("/wallet", walletController.getAllWallets);
+router.get("/wallet/:id", walletController.getWalletById);
+router.post("/wallet", walletController.createWallet);
+//router.post("/deposit", walletController.createDeposit);
+//router.get("/deposit/:txHash", walletController.getDeposit);
 
 module.exports = router;
